crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__unicode_escape_token_text_is_normalized_before_lexing.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
cl\u0061ss A {}

syntax:
syntax:
CompilationUnit
  ClassDeclaration
    ClassKw "class" @ 0..5 trailing=[Whitespace " "]
    Identifier "A" @ 6..7 trailing=[Whitespace " "]
    ClassBody
      LBrace "{" @ 8..9
      RBrace "}" @ 9..10
  Eof "" @ 10..10

diagnostics:
  (none)

diagnostics:
(none)
