crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__unicode_escapes_become_character_literal_delimiters_before_scanning.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
'\u0027'

syntax:
syntax:
CompilationUnit
  ErrorNode
    CharacterLiteral "''" @ 0..2
    CharacterLiteral "'" @ 2..3
  Eof "" @ 3..3

diagnostics:
  code=java.lex.invalid_character_literal severity=Error stage=Lexer range=0..2 message="invalid character literal"
  code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=2..3 message="unterminated character literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.lex.invalid_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=invalid character literal
code=java.lex.unterminated_character_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(2), end: TextSize(3) }) message=unterminated character literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
