crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__unicode_escapes_become_string_literal_delimiters_before_scanning.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"\u0022"

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      TextBlockLiteral "\"\\u0022\"" @ 0..8
  Eof "" @ 8..8

diagnostics:
  code=java.lex.missing_text_block_line_terminator severity=Error stage=Lexer range=0..8 message="text block opening delimiter must be followed by a line terminator"
  code=java.lex.unterminated_text_block severity=Error stage=Lexer range=0..8 message="unterminated text block"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..8 message="unexpected token at top level"

diagnostics:
code=java.lex.missing_text_block_line_terminator severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(8) }) message=text block opening delimiter must be followed by a line terminator
code=java.lex.unterminated_text_block severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(8) }) message=unterminated text block
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(8) }) message=unexpected token at top level
