crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__unicode_line_escape_is_a_newline_before_string_scanning.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"a\u000ab"

syntax:
syntax:
CompilationUnit
  ErrorNode
    StringLiteral "\"a" @ 0..2
    Identifier "b" @ 3..4 leading=[Newline "\n"]
    StringLiteral "\"" @ 4..5
  Eof "" @ 5..5

diagnostics:
  code=java.lex.unterminated_string_literal severity=Error stage=Lexer range=0..2 message="unterminated string literal"
  code=java.lex.unterminated_string_literal severity=Error stage=Lexer range=4..5 message="unterminated string literal"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.lex.unterminated_string_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unterminated string literal
code=java.lex.unterminated_string_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(4), end: TextSize(5) }) message=unterminated string literal
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
