crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__unicode_line_escape_terminates_line_comments_before_tokenization.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
int a; // comment \u000a int b;

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    FieldDeclaration
      PrimitiveType
        AnnotationList
        IntKw "int" @ 0..3 trailing=[Whitespace " "]
      VariableDeclaratorList
        VariableDeclarator
          Identifier "a" @ 4..5
      Semicolon ";" @ 5..6 trailing=[Whitespace " ", LineComment "// comment "]
    FieldDeclaration
      PrimitiveType
        AnnotationList
        IntKw "int" @ 20..23 leading=[Newline "\n", Whitespace " "] trailing=[Whitespace " "]
      VariableDeclaratorList
        VariableDeclarator
          Identifier "b" @ 24..25
      Semicolon ";" @ 25..26
  Eof "" @ 26..26

diagnostics:
  (none)

diagnostics:
(none)
