crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__unicode_newline_like_characters_are_not_line_terminators_01.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
int x; // comment  int y;

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  CompilationUnitDeclarationList
    FieldDeclaration
      PrimitiveType
        AnnotationList
        IntKw "int" @ 0..3 trailing=[Whitespace " "]
      VariableDeclaratorList
        VariableDeclarator
          Identifier "x" @ 4..5
      Semicolon ";" @ 5..6 trailing=[Whitespace " ", LineComment "// comment\u{2028} int y;"]
  Eof "" @ 27..27

diagnostics:
  (none)

diagnostics:
(none)
