crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__unicode_newline_like_characters_are_not_line_terminators_02.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
"a b"

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    BogusCompilationUnitItem
      StringLiteral "\"a\u{2028}b\"" @ 0..7
  Eof "" @ 7..7

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..7 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(7) }) message=unexpected token at top level
