crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__uses_longest_match_for_adjacent_minus_operators.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
a--b a- -b a -> b

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    FieldDeclaration
      ClassType
        ClassTypeSegmentList
          ClassTypeSegmentNode
            AnnotationList
            Name
              Identifier "a" @ 0..1
      VariableDeclaratorList
        VariableDeclarator
    BogusCompilationUnitItem
      MinusMinus "--" @ 1..3
      Identifier "b" @ 3..4 trailing=[Whitespace " "]
      Identifier "a" @ 5..6
      Minus "-" @ 6..7 trailing=[Whitespace " "]
      Minus "-" @ 8..9
      Identifier "b" @ 9..10 trailing=[Whitespace " "]
      Identifier "a" @ 11..12 trailing=[Whitespace " "]
      Arrow "->" @ 13..15 trailing=[Whitespace " "]
      Identifier "b" @ 16..17
  Eof "" @ 17..17

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=1..3 message="expected variable name"
  code=java.parse.expected_syntax severity=Error stage=Parser range=1..3 message="expected `;` after field declaration"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=1..3 message="unexpected token at top level"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1), end: TextSize(3) }) message=expected variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1), end: TextSize(3) }) message=expected `;` after field declaration
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(1), end: TextSize(3) }) message=unexpected token at top level
