crates/jolt_java_syntax/tests/snapshots/corpus__syntax__lexer__uses_longest_match_for_decimal_floats_before_dots.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
1... 1..2

syntax:
syntax:
CompilationUnit
  ErrorNode
    FloatingPointLiteral "1." @ 0..2
    Dot "." @ 2..3
    Dot "." @ 3..4 trailing=[Whitespace " "]
    FloatingPointLiteral "1." @ 5..7
    FloatingPointLiteral ".2" @ 7..9
  Eof "" @ 9..9

diagnostics:
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=0..2 message="unexpected token at top level"

diagnostics:
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(0), end: TextSize(2) }) message=unexpected token at top level
